Index Header Style

--- a/css/indexStyle.css
+++ b/css/indexStyle.css
@@ -49,6 +49,29 @@
   margin-top: 10px;
   color: grey;
 }
+.searchSection {
+  position: absolute;
+  margin-left: 2%;
+  margin-top: -7%;
+  width: 100%;
+}
+.searchTextField {
+  width: 30% !important;
+  border: solid 2px white;
+  border-radius: 100px;
+  background: transparent;
+  height: 30%;
+  outline: none;
+  padding: 2px;
+  padding-left: 10px;
+  padding-right: 30px;
+  min-width: 100px;
+  color: white;
+}
+.searchIcon {
+  margin-left: -35px;
+  color: white;
+}
 @media (max-width: 975px) {
   .commonSection {
     padding: 50px;
@@ -65,6 +88,18 @@
   .cursorImageView {
     height: 180px;
     margin-top: 00px;
+  }
+  .searchTextField {
+    height: 20px;
+  }
+  .searchSection {
+    margin-top: -9%;
+    margin-left: 0%;
+  }
+  .searchIcon {
+    margin-left: -25px;
+    color: white;
+    font-size: 12px;
   }
 }
 @media (max-width: 400px) {
