--- a/css/fixedStyle.css
+++ b/css/fixedStyle.css
@@ -54,10 +54,10 @@ body {
   margin-left: 10px;
 }
 .marginTop10 {
-  margin-top: 10px;
+  margin-top: 10px !important;
 }
 .marginTop20 {
-  margin-top: 20px;
+  margin-top: 20px !important;
 }
 .marginTop50 {
   margin-top: 50px;
@@ -99,7 +99,9 @@ body {
   border-radius: 100px;
   border: solid 2px #26a2ad;
 }
-
+.clickHoverEffect {
+  cursor: pointer;
+}
 .clickHoverEffect:hover {
   transition: 0.3s;
   transform: scale(1.2);
@@ -159,5 +161,8 @@ body {
   }
   .mobileMarginTop20 {
     margin-top: 20px !important;
+  }
+  .marginBottomMobile50 {
+    margin-bottom: 50px !important;
   }
 }
