--- a/css/headerStyle.css
+++ b/css/headerStyle.css
@@ -1,3 +1,9 @@
+.stickyHeader {
+  position: sticky;
+  top: 0;
+  z-index: 99999 !important;
+}
+
 .topHeaderBackground {
   background-color: #2c2d4b !important;
 }
@@ -15,7 +21,8 @@
   cursor: pointer;
 }
 .headerLogo {
-  width: 120px;
+  width: 150px;
+  transition: 0.3s;
 }
 .fables-nav .nav-link {
   font-size: 12px;
@@ -44,6 +51,7 @@
   transform: scale(0.9);
 }
 .ieltsButton {
+  border-radius: 100px;
   background-image: linear-gradient(to right, #fd5396, #f56c49, #f17a28);
   border: solid 1px #fd5396 !important;
   color: white;
@@ -66,6 +74,7 @@
   outline: none;
 }
 .expertButton {
+  border-radius: 100px;
   width: 150px;
   padding: 10px;
   cursor: pointer;
