--- a/css/fixedStyle.css
+++ b/css/fixedStyle.css
@@ -29,6 +29,9 @@ body {
 .fontSize30 {
   font-size: 30px;
 }
+.fontSize5vmin {
+  font-size: 5vmin;
+}
 .width70pc {
   width: 70%;
 }
@@ -61,6 +64,12 @@ body {
 }
 .minWidth120 {
   min-width: 120px;
+}
+.paddingBottom10 {
+  padding-bottom: 10px;
+}
+.paddingBottom20 {
+  padding-bottom: 20px;
 }
 .marginLeft10 {
   margin-left: 10px;
@@ -135,6 +144,9 @@ body {
 .customButton:active {
   box-shadow: 4px 4px 4px rgba(0, 0, 0, 0.679);
 }
+.flex {
+  display: flex;
+}
 .flexDirectionRow {
   display: flex;
   flex-direction: row;
@@ -160,6 +172,16 @@ body {
   justify-content: center;
   align-items: center;
 }
+.right {
+  text-align: right;
+  justify-content: flex-end;
+  align-items: flex-end;
+}
+.left {
+  text-align: left;
+  justify-content: flex-start;
+  align-items: flex-start;
+}
 .textCapitalize {
   text-transform: capitalize;
 }
@@ -174,6 +196,9 @@ body {
 .anchorTag {
   text-decoration: none;
   color: white;
+}
+.overflowHide {
+  overflow: hidden;
 }
 @media (max-width: 975px) {
   .columnReverseMobile {
