--- a/css/footerStyle.css
+++ b/css/footerStyle.css
@@ -3,8 +3,8 @@
   position: fixed;
   right: 20px;
   bottom: 20px;
-  width: 30px;
-  height: 30px;
+  width: 40px;
+  height: 40px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -32,8 +32,10 @@
   font-size: 15px;
   margin-bottom: 10px;
   color: #b6b6b6;
+  font-family: Roboto;
 }
 .footerSectionBody {
+  font-family: Roboto;
   padding-block: 2px;
   cursor: pointer;
   transition: 0.3s;
