--- a/css/headerStyle.css
+++ b/css/headerStyle.css
@@ -26,7 +26,7 @@
   transition: 0.3s;
 }
 .fables-nav .nav-link {
-  font-size: 12px;
+  font-size: 16px;
   color: #036068 !important;
   font-weight: bold;
   transition: 0.3s;
@@ -74,6 +74,7 @@
   transform: scale(0.98) !important;
   outline: none;
 }
+
 .expertButton {
   border-radius: 100px;
   width: 150px;
@@ -93,6 +94,10 @@
 .expertButton:active {
   transform: scale(0.98) !important;
   outline: none;
+}
+.customExpertButton {
+  width: 160px;
+  padding: 5px;
 }
 .fables-nav {
   align-items: center !important;
@@ -148,7 +153,14 @@
 .textareaInput {
   resize: none;
 }
-
+.loginDropdown {
+  position: absolute;
+}
+.dropdown-item:hover {
+  color: #77aeb3 !important;
+  /* transform: scale(1.02); */
+  transition: 0.3s;
+}
 @media (min-width: 768px) {
   .fables-header-icons {
     text-align: right;
