--- a/css/indexStyle.css
+++ b/css/indexStyle.css
@@ -1,3 +1,6 @@
+html {
+  font-family: Poppins;
+}
 .bodySection {
   padding-block: 50px;
 }
@@ -5,7 +8,7 @@
   padding-inline: 100px;
 }
 .title1 {
-  font-size: 4vmax;
+  font-size: 3.4vmax;
   font-weight: bold;
 }
 .section1TitleView {
@@ -28,7 +31,7 @@
   background-color: #036068;
   cursor: pointer;
   border: solid 1px rgba(128, 128, 128, 0.444);
-  box-shadow: 10px 10px 10px #00000082;
+  box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.457);
 }
 .cursorImageView:active {
   transform: scale(0.9);
@@ -130,6 +133,9 @@
     margin-left: -25px;
     color: white;
     font-size: 12px;
+  }
+  .socialIconSection {
+    display: none;
   }
 }
 @media (max-width: 400px) {
