--- a/css/style.css
+++ b/css/style.css
@@ -4734,7 +4734,7 @@ h2 {
     margin-left: 16% !important;
   }
   #gmattoptext {
-    /* margin-top: 19% !important; */
+    margin-top: 19% !important;
   }
   .contact {
     float: none;
@@ -4799,7 +4799,7 @@ h2 {
   }
 
   #gmattoptext {
-    /* margin-top: 62% !important; */
+    margin-top: 62% !important;
   }
 }
 
@@ -4996,7 +4996,7 @@ h2 {
     margin-left: -3% !important;
   }
   #gmattoptext {
-    /* margin-top: 27% !important; */
+    margin-top: 27% !important;
   }
 }
 @media (max-width: 320px) {
